maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:11: error: expected class or object definition
def isWallL(): Boolean={
^Escaper:22: error: Unmatched closing brace '}' ignored here
}
^