maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  while (!estSurBiscuit()){
    if(estFaceMur()){droite()}
    else if(isWallL()){avance()}
    else if (estDosMur()){avance()}
    }
  }
}


def isWallL(): Boolean={
  var rep= false
  gauche()
  if (estFaceMur){rep=true}
  droite()
  return rep
}


